--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+nik<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -72,7 +72,7 @@ https://templatemo.com/tm-534-parallo
               <hr class="tm-home-hr" />
               <h2 class="tm-home-title">Mobile App for Your Business</h2>
               <p class="tm-home-text">
-                Parallo is a landing page template based on Bootstrap v4.3.1 framework. Please tell your friends about TemplateMo. Thank you.
+                GuerniKa Post es un taller de produccion de visualizacion de datos con toda la robustez de la ciencia de datos y la belleza de el arte con datos.
               </p>
               <a href="#tmFeatures" class="btn btn-primary">Learn More</a>
             </div>
