--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-534-parallo
             <div class="text-white tm-home-left">
               <p class="text-uppercase tm-slogan">We can develop</p>
               <hr class="tm-home-hr" />
-              <h2 class="tm-home-title">Mobile App for Your Business</h2>
+              <h2 class="tm-home-title">Investigaciones de principio a fin y/o piezas de contenido especificas</h2>
               <p class="tm-home-text">
                 GuerniKa Post es un taller de produccion de visualizacion de datos con toda la robustez de la ciencia de datos y la belleza de el arte con datos.
               </p>
