--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ https://templatemo.com/tm-534-parallo
               <i class="fas fa-2x fa-pen tm-brand-icon"></i>
               <div class="tm-brand-texts">
                 <h1 class="text-uppercase tm-brand-name">GuerniKa Post</h1>
-                <p class="small">new app landing page</p>
+                <p class="small">Entre la ciencia y arte de datos</p>
               </div>
             </div>
           </div>
